[tool.poetry]
name = "reflectionagent"
version = "0.1.0"
description = ""
authors = ["Homayoun <hsohrab23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.12"
langgraph = "^0.2.3"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.20"
langchain-community = "^0.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
